# rust_kmer_hash_cuda

./: Cargo.toml  README.md  build.rs
src/: main.rs  sin.cu  sketch.rs  sketch_cuda.rs
src/cuda/includes/: wrapper.h
src/cuda/kernels/: my_struct_kernel.cu
