[package]
name = "rust_kmer_hash_cuda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0.82"
regex = "1.9.3"

[dependencies]
cudarc = "0.10.0"

needletail = "0.5.1"
seq_io = "0.3.2"

rayon = "1.8.0"
glob = "0.3.1"
indicatif = "0.17.7"


[profile.release]
panic = "abort"
lto = true

[profile.dev]
opt-level = 3
